--- a/index.html
+++ b/index.html
@@ -1,261 +1,238 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <title>AR Interaction Lab (No Super-Hands)</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+<!doctype HTML>
+<html>
+<link rel="icon" href="data:;base64,iVBORw0KGgo=">
 
-  <!-- A-Frame -->
-  <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
-  <!-- AR.js for A-Frame (marker-based AR) -->
-  <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
+<script
+  src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 
-  <style>
-    body { margin:0; overflow:hidden; }
-    .hud {
-      position: fixed; bottom: 14px; left: 50%; transform: translateX(-50%);
-      display: grid; grid-template-columns: repeat(5, auto); gap: 8px;
-      font: 600 14px/1 system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-      z-index: 10; pointer-events: none;
-    }
-    .hud.hidden { display: none; }
-    .hud button {
-      pointer-events: auto;
-      padding: 10px 12px; border: 0; border-radius: 10px;
-      background: rgba(255,255,255,.9);
-    }
-  </style>
+<style>
+  .arjs-loader {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 
-  <script>
-  // ---------- Utilities ----------
-  const clamp = (v, lo, hi) => Math.max(lo, Math.min(hi, v));
+  .arjs-loader div {
+    text-align: center;
+    font-size: 1.25em;
+    color: white;
+  }
 
-  // ---------- 1) Tap / doubletap / longpress ----------
-  AFRAME.registerComponent('tap-gestures', {
-    schema: {longMs:{default:500}},
-    init () {
-      let lastTap = 0, pressTimer = null, down = false;
-      this.el.addEventListener('mousedown', () => {
-        down = true;
-        const now = performance.now();
-        if (now - lastTap < 300) this.el.emit('doubletap');
-        lastTap = now;
-        pressTimer = setTimeout(() => { if (down) this.el.emit('longpress'); }, this.data.longMs);
-      });
-      this.el.addEventListener('mouseup', () => {
-        down = false;
-        clearTimeout(pressTimer);
-        this.el.emit('tap');
-      });
-      this.el.addEventListener('touchstart', e => e.preventDefault(), {passive:false});
-    }
-  });
+  #debug-info {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    padding: 10px;
+    border-radius: 5px;
+    font-family: Arial, sans-serif;
+    font-size: 11px;
+    z-index: 10000;
+    max-width: 250px;
+  }
 
-  // ---------- 2) Drag on a plane (marker plane) ----------
-  // Drag with mouse/touch by intersecting an invisible plane and moving the entity to that point.
-  AFRAME.registerComponent('drag-on-plane', {
-    schema: { plane: {type: 'selector'}, yOffset: {default: 0.25}, radius: {default: 0.6} },
-    init () {
-      this.dragging = false;
-      this.scene = this.el.sceneEl;
-      this.rayEl = document.querySelector('#ray'); // scene cursor ray
-      // listen on element
-      this.el.addEventListener('mousedown', () => this.dragging = true);
-      window.addEventListener('mouseup',   () => this.dragging = false);
-      window.addEventListener('touchend',  () => this.dragging = false);
-      // move
-      this.scene.addEventListener('mousemove', (e)=> this.updateDrag());
-      this.scene.addEventListener('touchmove', (e)=> this.updateDrag());
-    },
-    updateDrag () {
-      if (!this.dragging) return;
-      if (!this.data.plane) return;
-      const raycaster = this.rayEl.getObject3D('raycaster');
-      if (!raycaster) return;
-      const planeMesh = this.data.plane.getObject3D('mesh');
-      if (!planeMesh) return;
+  #debug-info div {
+    margin: 4px 0;
+  }
 
-      // Build a THREE.Plane from the plane entity (its world transform).
-      planeMesh.updateMatrixWorld();
-      const normal = new THREE.Vector3(0,1,0).applyQuaternion(planeMesh.getWorldQuaternion(new THREE.Quaternion()));
-      const point  = planeMesh.getWorldPosition(new THREE.Vector3());
-      const plane  = new THREE.Plane().setFromNormalAndCoplanarPoint(normal, point);
+  .debug-success {
+    color: #4CAF50;
+    font-weight: bold;
+  }
 
-      const ray = raycaster.ray; // world-space ray from cursor
-      const hit = new THREE.Vector3();
-      if (ray.intersectPlane(plane, hit)) {
-        // constrain to radius on XZ around marker center
-        const local = this.el.parentEl.object3D.worldToLocal(hit.clone());
-        const r = Math.hypot(local.x, local.z);
-        const maxR = this.data.radius;
-        if (r > maxR){
-          const k = maxR / r;
-          local.x *= k; local.z *= k;
-        }
-        this.el.setAttribute('position', `${local.x} ${this.data.yOffset} ${local.z}`);
-      }
-    }
-  });
+  .debug-error {
+    color: #FF5722;
+    font-weight: bold;
+  }
 
-  // ---------- 3) Pinch to scale ----------
-  AFRAME.registerComponent('pinch-scale', {
-    schema: {min:{default:0.2}, max:{default:3}},
-    init(){
-      this.active = false; this.startD = 0; this.startScale = null;
-      const onStart = (e) => {
-        if (e.touches && e.touches.length === 2){
-          this.active = true;
-          this.startD = this.dist(e.touches[0], e.touches[1]);
-          this.startScale = Object.assign({}, this.el.getAttribute('scale'));
-        }
-      };
-      const onMove = (e) => {
-        if (!this.active || !e.touches || e.touches.length < 2) return;
-        const d = this.dist(e.touches[0], e.touches[1]);
-        const mult = d / this.startD;
-        const ns = {
-          x: clamp(this.startScale.x * mult, this.data.min, this.data.max),
-          y: clamp(this.startScale.y * mult, this.data.min, this.data.max),
-          z: clamp(this.startScale.z * mult, this.data.min, this.data.max),
-        };
-        this.el.setAttribute('scale', ns);
-      };
-      const onEnd = () => this.active = false;
-      window.addEventListener('touchstart', onStart, {passive:false});
-      window.addEventListener('touchmove',  onMove,  {passive:false});
-      window.addEventListener('touchend',   onEnd);
-      window.addEventListener('touchcancel',onEnd);
-    },
-    dist(a,b){ const dx=a.clientX-b.clientX, dy=a.clientY-b.clientY; return Math.hypot(dx,dy); }
-  });
+  .debug-warning {
+    color: #FFC107;
+  }
 
-  // ---------- 4) Twist to rotate (two-finger) ----------
-  AFRAME.registerComponent('twist-rotate', {
-    schema:{degPerRad:{default:57.2958}}, // 180/π
-    init(){
-      this.active = false; this.startA = 0; this.startRotY = 0;
-      const angle = (a,b)=> Math.atan2(b.clientY-a.clientY, b.clientX-a.clientX);
-      const onStart = (e)=>{
-        if (e.touches && e.touches.length === 2){
-          this.active = true;
-          this.startA = angle(e.touches[0], e.touches[1]);
-          this.startRotY = this.el.getAttribute('rotation').y;
-        }
-      };
-      const onMove = (e)=>{
-        if (!this.active || !e.touches || e.touches.length < 2) return;
-        const a = angle(e.touches[0], e.touches[1]);
-        const delta = (a - this.startA) * this.data.degPerRad;
-        const r = this.el.getAttribute('rotation');
-        this.el.setAttribute('rotation', {x:r.x, y:this.startRotY + delta, z:r.z});
-      };
-      const onEnd = ()=> this.active = false;
-      window.addEventListener('touchstart', onStart, {passive:false});
-      window.addEventListener('touchmove',  onMove,  {passive:false});
-      window.addEventListener('touchend',   onEnd);
-      window.addEventListener('touchcancel',onEnd);
-    }
-  });
+  .debug-info {
+    color: #FFFFFF;
+  }
+</style>
 
-  // ---------- 5) Spin toggler + random color (hooked to taps) ----------
-  AFRAME.registerComponent('spin-toggle', {
-    schema:{speed:{default:4000}},
-    init(){
-      this.spinning = false;
-      this.el.addEventListener('toggle-spin', ()=> {
-        this.spinning = !this.spinning;
-        if (this.spinning) {
-          this.el.setAttribute('animation__spin',
-            `property: rotation; to: 0 360 0; loop: true; dur: ${this.data.speed}`);
-        } else {
-          this.el.removeAttribute('animation__spin');
-        }
-      });
-      this.el.addEventListener('random-color', ()=> {
-        const colors = ['#4CC3D9','#FFC65D','#7BC8A4','#EF2D5E','#FFFFFF'];
-        const c = colors[Math.floor(Math.random()*colors.length)];
-        this.el.setAttribute('material','color',c);
-      });
-    }
-  });
-  </script>
-</head>
-<body>
-  <!-- HUD -->
-  <div class="hud" id="hud">
-    <button id="btn-rot-l">⟲</button>
-    <button id="btn-rot-r">⟳</button>
-    <button id="btn-scale--">−</button>
-    <button id="btn-scale-+">＋</button>
-    <button id="btn-color">🎨</button>
+<body style="margin: 0px; overflow: hidden;">
+  <div class="arjs-loader">
+    <div>Loading, please wait...</div>
   </div>
 
-  <a-scene
-    embedded
-    renderer="colorManagement: true; physicallyCorrectLights: true"
-    xr-mode-ui="enabled: false"
-    arjs="sourceType: webcam; detectionMode: mono; debugUIEnabled: false">
+  <!-- Debug info display in upper right corner -->
+  <div id="debug-info">
+    <strong>DEBUG LOG:</strong>
+    <div id="debug-messages"></div>
+  </div>
 
-    <!-- Cursor ray for mouse/touch (A-Frame builds a raycaster object3D for us) -->
-    <a-entity id="ray" cursor="rayOrigin: mouse" raycaster="objects: .raytarget"></a-entity>
+  <a-scene vr-mode-ui="enabled: false;" renderer="logarithmicDepthBuffer: true;" embedded
+    arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;">
+    <!-- Sticker 1: Pisica1 Logo - Always available, starts the quest -->
+    <a-nft id="pisica1Marker" type="nft" url="./images/pisica1" smooth="true" smoothCount="10" smoothTolerance=".01"
+      smoothThreshold="5">
+      <a-entity position="0 0 0" scale="75 75 75" gltf-model="assets/laptop.glb" rotation="-90 0 0"></a-entity>
+      <a-text value="#Find Student Fuel" align="center" color="#FFFFFF" width="8" position="0 -20 -20"
+        rotation="-90 0 0" scale="50 50 50"></a-text>
+    </a-nft>
 
-    <!-- Lights -->
-    <a-entity light="type: ambient; intensity: 0.8"></a-entity>
-    <a-entity light="type: directional; intensity: 0.6" position="0 1 1"></a-entity>
+    <!-- Sticker 2: pisica2 - Unlocked after pisica1 -->
+    <a-nft id="pisica2Marker" type="nft" url="./images/pisica2" smooth="true" smoothCount="10" smoothTolerance=".01"
+      smoothThreshold="5">
+      <a-entity id="pisica2Model" position="0 0 0" scale="50 50 50" gltf-model="assets/coffe_cup.glb"
+        rotation="-90 75 0" visible="false"></a-entity>
+      <a-text id="pisica2Text" value="#Find Humour" align="center" color="#FFFFFF" width="8" position="0 -20 -20"
+        rotation="-90 0 0" scale="50 50 50" visible="false"></a-text>
+    </a-nft>
 
-    <!-- Marker -->
-    <a-marker preset="hiro" id="marker">
+    <!-- Sticker 3: pisica3 - Unlocked after pisica2 -->
+    <a-nft id="pisica3Marker" type="nft" url="./images/pisica3" smooth="true" smoothCount="10" smoothTolerance=".01"
+      smoothThreshold="5">
+      <a-entity id="pisica3Model" position="100 -250 -250" scale="5 5 5" gltf-model="assets/emoji_laugh.glb"
+        rotation="-90 0 0" visible="false"></a-entity>
+      <a-text id="pisica3Text" value="#Find Function" align="center" color="#FFFFFF" width="8" position="0 -20 -20"
+        rotation="-90 0 0" scale="50 50 50" visible="false"></a-text>
+    </a-nft>
 
-      <!-- Invisible drag plane anchored to marker -->
-      <a-plane id="dragplane" class="raytarget"
-               position="0 0 0" rotation="-90 0 0" width="2" height="2"
-               material="color: #000; opacity: 0; transparent: true"></a-plane>
-
-      <!-- Interactive object -->
-      <a-box id="cube" class="raytarget"
-             position="0 0.25 0" depth="0.5" height="0.5" width="0.5"
-             material="metalness:0.1; roughness:0.6; color:#4CC3D9"
-             tap-gestures spin-toggle
-             drag-on-plane="plane: #dragplane; yOffset: 0.25; radius: 0.6"
-             pinch-scale twist-rotate>
-      </a-box>
-
-      <!-- Marker center dot (optional) -->
-      <a-cylinder radius="0.01" height="0.001" color="#888"></a-cylinder>
-    </a-marker>
+    <!-- Sticker 4: pisica4 - Final stage, unlocked after pisica3 -->
+    <a-nft id="pisica4Marker" type="nft" url="./images/pisica4" smooth="true" smoothCount="10" smoothTolerance=".01"
+      smoothThreshold="5">
+      <a-entity id="pisica4Model" position="0 0 0" scale="10 10 10" gltf-model="assets/graduation_cap.glb"
+        rotation="-90 0 0" visible="false"></a-entity>
+      <a-text id="pisica4Text" value="#Congrats! You Survived University" align="center" color="#FFFFFF" width="8"
+        position="0 -20 -20" rotation="-90 0 0" scale="50 50 50" visible="false"></a-text>
+    </a-nft>
 
     <a-entity camera></a-entity>
   </a-scene>
 
   <script>
-    const hud  = document.getElementById('hud');
-    const cube = document.getElementById('cube');
+    let pisica1Scanned = false;
+    let pisica2Scanned = false;
+    let pisica3Scanned = false;
 
-    // Buttons
-    document.getElementById('btn-rot-l').addEventListener('click', () => nudgeRot(-15));
-    document.getElementById('btn-rot-r').addEventListener('click', () => nudgeRot( 15));
-    function nudgeRot(delta){
-      const r = cube.getAttribute('rotation');
-      cube.setAttribute('rotation', {x:r.x, y:r.y + delta, z:r.z});
+    // Add debug message to screen
+    function addDebugMessage(message, type = 'info') {
+      const debugDiv = document.getElementById('debug-messages');
+      if (debugDiv) {
+        const msg = document.createElement('div');
+        msg.textContent = message;
+        msg.className = 'debug-' + type;
+        debugDiv.appendChild(msg);
+
+        // Keep only last 8 messages
+        while (debugDiv.children.length > 8) {
+          debugDiv.removeChild(debugDiv.firstChild);
+        }
+      }
     }
 
-    document.getElementById('btn-scale--').addEventListener('click', () => nudgeScale(0.9));
-    document.getElementById('btn-scale-+').addEventListener('click', () => nudgeScale(1.1));
-    function nudgeScale(mult){
-      const s = cube.getAttribute('scale');
-      cube.setAttribute('scale', {
-        x: clamp(s.x * mult, 0.2, 3),
-        y: clamp(s.y * mult, 0.2, 3),
-        z: clamp(s.z * mult, 0.2, 3)
+    document.querySelector('a-scene').addEventListener('loaded', function () {
+      addDebugMessage('Scene loaded! Quest ready.', 'success');
+      addDebugMessage('Scan pisica1 marker first!', 'warning');
+
+      const pisica1Marker = document.querySelector('#pisica1Marker');
+      const pisica2Marker = document.querySelector('#pisica2Marker');
+      const pisica3Marker = document.querySelector('#pisica3Marker');
+      const pisica4Marker = document.querySelector('#pisica4Marker');
+
+      const pisica2Model = document.querySelector('#pisica2Model');
+      const pisica3Model = document.querySelector('#pisica3Model');
+      const pisica4Model = document.querySelector('#pisica4Model');
+
+      const pisica2Text = document.querySelector('#pisica2Text');
+      const pisica3Text = document.querySelector('#pisica3Text');
+      const pisica4Text = document.querySelector('#pisica4Text');
+
+      // When pisica1 marker found
+      pisica1Marker.addEventListener('markerFound', function () {
+        console.log('pisica1 marker found!');
+        addDebugMessage('✓ pisica1 found!', 'success');
+        pisica1Scanned = true;
+        addDebugMessage('Next: Scan pisica2 marker', 'warning');
       });
-    }
 
-    document.getElementById('btn-color').addEventListener('click', () => cube.emit('random-color'));
+      pisica1Marker.addEventListener('markerLost', function () {
+        addDebugMessage('pisica1 marker lost', 'info');
+      });
 
-    // Gesture hooks
-    cube.addEventListener('tap',       () => cube.emit('toggle-spin'));        // single tap: spin on/off
-    cube.addEventListener('doubletap', () => cube.emit('random-color'));       // double tap: recolor
-    cube.addEventListener('longpress', () => hud.classList.toggle('hidden'));  // long press: show/hide HUD
+      // When pisica2 marker found
+      pisica2Marker.addEventListener('markerFound', function () {
+        console.log('pisica2 marker found!');
+        addDebugMessage('pisica2 marker detected', 'info');
+        if (pisica1Scanned) {
+          pisica2Model.setAttribute('visible', 'true');
+          pisica2Text.setAttribute('visible', 'true');
+          pisica2Scanned = true;
+          addDebugMessage('✓ pisica2 unlocked!', 'success');
+          addDebugMessage('Next: Scan pisica3 marker', 'warning');
+          console.log('pisica2 model is now visible!');
+        } else {
+          addDebugMessage('✗ BLOCKED! Scan pisica1 first', 'error');
+          console.log('pisica1 marker must be scanned first!');
+        }
+      });
+
+      pisica2Marker.addEventListener('markerLost', function () {
+        pisica2Model.setAttribute('visible', 'false');
+        pisica2Text.setAttribute('visible', 'false');
+        addDebugMessage('pisica2 marker lost', 'info');
+      });
+
+      // When pisica3 marker found
+      pisica3Marker.addEventListener('markerFound', function () {
+        console.log('pisica3 marker found!');
+        addDebugMessage('pisica3 marker detected', 'info');
+        if (pisica2Scanned) {
+          pisica3Model.setAttribute('visible', 'true');
+          pisica3Text.setAttribute('visible', 'true');
+          pisica3Scanned = true;
+          addDebugMessage('✓ pisica3 unlocked!', 'success');
+          addDebugMessage('Final: Scan pisica4 marker', 'warning');
+          console.log('pisica3 model is now visible!');
+        } else {
+          addDebugMessage('✗ BLOCKED! Scan pisica2 first', 'error');
+          console.log('pisica2 marker must be scanned first!');
+        }
+      });
+
+      pisica3Marker.addEventListener('markerLost', function () {
+        pisica3Model.setAttribute('visible', 'false');
+        pisica3Text.setAttribute('visible', 'false');
+        addDebugMessage('pisica3 marker lost', 'info');
+      });
+
+      // When pisica4 marker found
+      pisica4Marker.addEventListener('markerFound', function () {
+        console.log('pisica4 marker found!');
+        addDebugMessage('pisica4 marker detected', 'info');
+        if (pisica3Scanned) {
+          pisica4Model.setAttribute('visible', 'true');
+          pisica4Text.setAttribute('visible', 'true');
+          addDebugMessage('✓ pisica4 unlocked!', 'success');
+          addDebugMessage('🎉 Quest complete!', 'success');
+          console.log('pisica4 model is now visible! Quest complete!');
+        } else {
+          addDebugMessage('✗ BLOCKED! Scan pisica3 first', 'error');
+          console.log('pisica3 marker must be scanned first!');
+        }
+      });
+
+      pisica4Marker.addEventListener('markerLost', function () {
+        pisica4Model.setAttribute('visible', 'false');
+        pisica4Text.setAttribute('visible', 'false');
+        addDebugMessage('pisica4 marker lost', 'info');
+      });
+    });
   </script>
 </body>
+
 </html>
